
Version 0.3.5dev (TBA)
======================

New features:
  
  * CTags support
  * Project-wide autocomplete
  * Double click respects word boundaries

Fixes:

  * Fix delete at end of line when using "\r\n" delimiter
  * Increase and decrease indent commands respect soft tabs and tab width settings
  
New contributors:

  * Antono Vasiljev

Version 0.3.4dev (7 Mar 2010)
=============================

New features:

  * Auto-pairer inserts matching characters ( -> ), " -> ", etc
  * Snippets
  * Recent directories menu
  * Uses Gecko for HTMLTabs on Windows.
  
Internal changes:

  * New API for creating text Marks, to tag a position in a Document.
  * new PersistentCache class for plugins to simply cache stuff.
  * Textmate plugin for dealing with Textmate bundles.
  * Application focus in/out events.
  
Fixes:

  * Respects Windows style line delimiters
  
New contributors:

  * Aaron McLeod

Version 0.3.3dev (21 Feb 2010)
==============================

New features:

  * Tab stops:
    - Can set tab width for open tab.
    - Default tab width is remembered per language.
    - Soft tabs (spaces that behave like tabs).
    - Default soft/hard option is remembered per language.
  * FindFileDialog:
     - opens with a list of files opened this session.
     - caches file list between invocations (cleared on window focus)
  * Can autocomplete with a menu popup.
  * Opens files and folders passed on the command line.
  * Reopens last open directory on startup.
  * Single instance support: redirects to currently open instance if any.
  * Added 'encryption' plugin, mainly as an example.
  * Forward search: wraps, regex option, match case option.
  * Very raw edit preferences command (Show me the YAML!)
  * Help > About command
  * Can specify HTTP_PROXY for downloading jars.
  * REPL captures and prints STDOUT
  * Can register Redcar for opening files on Windows. (See redcar -h)

Internal changes:
